Closed Bug 1522846 Opened 5 years ago Closed 5 years ago

Permafailing Bustage /builds/worker/workspace/build/src/js/src/wasm/AsmJS.cpp:7088:3: error: use of undeclared identifier 'SprintfLiteral' when Gecko 66 merges to Beta 2019-01-21

Categories

(Core :: JavaScript: WebAssembly, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla66
Tracking Status
firefox-esr60 --- unaffected
firefox64 --- unaffected
firefox65 --- unaffected
firefox66 + verified

People

(Reporter: RaulG, Assigned: Waldo)

References

Details

[Tracking Requested - why for this release]:

Central as beta simulation: https://treeherder.mozilla.org/#/jobs?repo=try&revision=d86a8f66f46ca3221d538868788a0c52fe14d5a1

Log link: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=224027009&repo=try&lineNumber=4700

Log snippet:

[task 2019-01-25T14:33:31.377Z] 14:33:31 INFO - /builds/worker/workspace/build/src/sccache2/sccache /builds/worker/workspace/build/src/clang/bin/clang++ -isysroot /builds/worker/workspace/build/src/MacOSX10.11.sdk --target=x86_64-darwin11 -o Unified_cpp_js_src_wasm0.o -c -flto=thin -fvisibility=hidden -fvisibility-inlines-hidden -DNDEBUG=1 -DTRIMMED=1 -DWASM_HUGE_MEMORY -DJS_HAS_CTYPES -DFFI_BUILDING -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/workspace/build/src/js/src/wasm -I/builds/worker/workspace/build/src/obj-firefox/js/src/wasm -I/builds/worker/workspace/build/src/obj-firefox/js/src -I/builds/worker/workspace/build/src/js/src -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/js/src/js-confdefs.h -Qunused-arguments -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++1z-compat -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-noexcept-type -Wno-unknown-warning-option -Wno-return-type-c-linkage -fno-sized-deallocation -fcrash-diagnostics-dir=/builds/worker/artifacts -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fno-common -stdlib=libc++ -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/build/src/obj-firefox/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fomit-frame-pointer -funwind-tables -Werror -fno-strict-aliasing -Werror=format -Wno-shadow -MD -MP -MF .deps/Unified_cpp_js_src_wasm0.o.pp /builds/worker/workspace/build/src/obj-firefox/js/src/wasm/Unified_cpp_js_src_wasm0.cpp
[task 2019-01-25T14:33:31.377Z] 14:33:31 INFO - In file included from /builds/worker/workspace/build/src/obj-firefox/js/src/wasm/Unified_cpp_js_src_wasm0.cpp:2:
[task 2019-01-25T14:33:31.377Z] 14:33:31 ERROR - /builds/worker/workspace/build/src/js/src/wasm/AsmJS.cpp:7088:3: error: use of undeclared identifier 'SprintfLiteral'
[task 2019-01-25T14:33:31.377Z] 14:33:31 INFO - SprintfLiteral(timeChars, "%u", compilationTime);
[task 2019-01-25T14:33:31.377Z] 14:33:31 INFO - ^
[task 2019-01-25T14:33:31.377Z] 14:33:31 INFO - 1 error generated.
[task 2019-01-25T14:33:31.377Z] 14:33:31 INFO - /builds/worker/workspace/build/src/config/rules.mk:1106: recipe for target 'Unified_cpp_js_src_wasm0.o' failed
[task 2019-01-25T14:33:31.378Z] 14:33:31 ERROR - make[4]: *** [Unified_cpp_js_src_wasm0.o] Error 1
[task 2019-01-25T14:33:31.378Z] 14:33:31 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src/wasm'
[task 2019-01-25T14:33:31.378Z] 14:33:31 INFO - make[4]: *** Waiting for unfinished jobs....
[task 2019-01-25T14:33:31.378Z] 14:33:31 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/modules/fdlibm/src'
[task 2019-01-25T14:33:31.378Z] 14:33:31 INFO - modules/fdlibm/src/s_copysign.o

Jeff, this showed up after bug 1509441 got backed out for the Try push to simulate beta to work around bustage (bug 1522824).

Merge day is on Monday. Please take a look at this.

Blocks: 1516697
Flags: needinfo?(jwalden)
Summary: Permafailing Bustage /builds/worker/workspace/build/src/js/src/wasm/AsmJS.cpp:7088:3: error: use of undeclared identifier 'SprintfLiteral' → Permafailing Bustage /builds/worker/workspace/build/src/js/src/wasm/AsmJS.cpp:7088:3: error: use of undeclared identifier 'SprintfLiteral' when Gecko 66 merges to Beta 2019-01-21
Pushed by jwalden@mit.edu:
https://hg.mozilla.org/integration/mozilla-inbound/rev/754797f49a61
Add a missing #include.  r=unified-builds-strike-again
Flags: needinfo?(jwalden)
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
Assignee: nobody → jwalden
You need to log in before you can comment on or make changes to this bug.