Bug 1522846 - Add a missing #include.  r=unified-builds-strike-again